# fnscript

./: Cargo.toml  README.md  charcount  example.fns  fnscript.sublime-syntax  fnscript.vim
macros/: Cargo.toml
macros/src/: lib.rs
src/: clap.rs  lib.rs  main.rs  parser.rs  script.rs  tokenizer.rs
src/exec/: error.rs  mod.rs
src/syn/: expr.rs  lisp.rs  macros.rs  mod.rs  token.rs
test/: syntax.fns  tokenize.fns
vim/ftdetect/: fnscript.vim
vim/ftplugin/: fnscript.vim
vim/syntax/: fnscript.vim
