[package]
name = "fnscript"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/fnscript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
rustc_lexer = "0.1.0"
unicode-normalization = "0.1.19"
unicode-width = "0.1.9"
unicode-xid = "0.2.3"
