[package]
name = "fns-macros"
version = "0.1.0"
edition = "2021"
categories = ["rust-patterns"]
description = "Make the struct its own builder"
documentation = "https://docs.rs/self-builder"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
keywords = ["derive", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/self-builder"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attribute-derive = { git = "https://github.com/ModProg/attribute-derive", version = "0.3.1" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.18"
quote-use = { version = "0.5.0", features = ["namespace_idents"] }
syn = "1.0"
